--- a/blocks/bubble-quote/src/style.scss
+++ b/blocks/bubble-quote/src/style.scss
@@ -7,11 +7,12 @@
 
  .wp-block-cjd-blocks-bubble-quote {
 	padding: 0;
-	margin: 0;
+	margin-bottom: 40px;
 
 	&> * {
 		margin-bottom: 0;
 	}
+
 
 	&:before {
 		content: none;
@@ -41,8 +42,8 @@
 			margin-left: calc(20px + 70px);
 		}
 	}
-s
+
 	&:not(.has-citation) {
-		margin-bottom: 4em;
+		margin-bottom: 32px;
 	}
 }
